--- a/bistro/bistro_news.html
+++ b/bistro/bistro_news.html
@@ -2,13 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Black Goose Bistro</title>
+        <title>The Black Goose Bistro News</title>
     </head>
     <body>
         <header>
             <h1>The Black Goose Bistro News</h1>
-        </header>
-        <nav>
+            <nav>
             <ul>
                 <li>Home</li>
                 <li>Menu</li>
@@ -16,6 +15,7 @@
                 <li>Contact</li>
             </ul>
         </nav>
+        </header>
         <article>
             <h2>Summer Menu Items</h2>
             <p>posted by BGB, <time>June 18, 2024</time></p>
