--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -28,21 +28,21 @@
     </head>
     <body>
         <img src="images/jenskitchen.jpg" alt="Jen's Kitchen">
-        <h1>Welcome to Jen’s Kitchen...</h1>
-        <p>People who know me know that I love to cook. I’ve created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
+        <h1>Welcome to Jen's Kitchen...</h1>
+        <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
         
-        <h2>From Jen’s cookbook</h2>
+        <h2>From Jen's cookbook</h2>
         <ul>
-            <li>Tapenade (Olive Spread)</li>
-            <li>Garlic Salmon</li>
-            <li>Linguine with Clam Sauce</li>
-            <li>Couscous with Peas and Mint</li>
+            <li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
+            <li><a href="recipes/salmon.html">Garlic Salmon</a></li>
+            <li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
+            <li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
         </ul>
 
         <h2>Good food resources</h2>
         <ul>
             <li>The Food Network</li>
-            <li>Epicurious </li>
+            <li><a href="https://www.epicurious.com/">Epicurious</a></li>
         </ul>
         
         <hr>
