--- a/jenskitchen/recipes/salmon.html
+++ b/jenskitchen/recipes/salmon.html
@@ -33,6 +33,6 @@
             <li>I usually serve this with an aromatic rice and a lightly seasoned stir fry.</li>
         </ol>
 
-        <p>[Back to the home page]</p>
+        <p><a href="../index.html">[Back to the home page]</a></p>
     </body>
 </html>
