--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -34,9 +34,9 @@
         <h2>From Jen's cookbook</h2>
         <ul>
             <li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
-            <li><a href="recipes/salmon.html">Garlic Salmon</a></li>
+            <li>Garlic Salmon</li>
             <li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
-            <li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
+            <li>Couscous with Peas and Mint</li>
         </ul>
 
         <h2>Good food resources</h2>
