--- a/jenskitchen/recipes/tapenade.html
+++ b/jenskitchen/recipes/tapenade.html
@@ -30,13 +30,13 @@
         </ul>
 
         <ol>
-        <li>Combine tomatoes and garlic in a food processor. Blend until as smooth as possible.</li>
-
-        <li>Add capers and olives. Pulse the motor a few times until they are incorporated, but still retain some texture.</li>
-
-        <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
+            <li>Combine tomatoes and garlic in a food processor. Blend until as smooth as possible.</li>
+            <li>Add capers and olives. Pulse the motor a few times until they are incorporated, but still retain some texture.</li>
+            <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
         </ol>
-
+        
+        <p><a href="pasta/linguine.html"><em>Try the Linguine with Clam Sauce</em></a></p>
+        <p><a href="https://www.allrecipes.com/"><em>Go to Allrecipes.com</em></a></p>
         <p><a href="../index.html">[Back to the home page]</a></p>
     </body>
 </html>
