--- a/jenskitchen/recipes/pasta/couscous.html
+++ b/jenskitchen/recipes/pasta/couscous.html
@@ -39,6 +39,6 @@
         </ol>
         
         <p><a href="../salmon.html"><em>Try this with Garlic Salmon</em></a></p>
-        <p>[Back to the home page]</p>
+        <p><a href="../../index.html">[Back to the home page]</a></p>
     </body>
 </html>
