--- a/jenskitchen/recipes/salmon.html
+++ b/jenskitchen/recipes/salmon.html
@@ -34,6 +34,6 @@
         </ol>
 
         <p><a href="tapenade.html"><em>Go to the Tapenade recipe</em></a></p>
-        <p>[Back to the home page]</p>
+        <p><a href="../index.html">[Back to the home page]</a></p>
     </body>
 </html>
