--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -42,7 +42,7 @@
         <h2>Good food resources</h2>
         <ul>
             <li>The Food Network</li>
-            <li><a href="https://www.epicurious.com/">Epicurious</a></li>
+            <li><a href="https://www.epicurious.com/" target="_blank">Epicurious</a></li>
         </ul>
         
         <hr>
