--- a/jenskitchen/recipes/salmon.html
+++ b/jenskitchen/recipes/salmon.html
@@ -33,7 +33,7 @@
             <li>I usually serve this with an aromatic rice and a lightly seasoned stir fry.</li>
         </ol>
 
-        <p><a href="tapenade.html"><em>Go to the Tapenade recipe</em></a></p>
+        <p><a href="tapenade.html">Go to the Tapenade recipe</a></p>
         <p><a href="../index.html">[Back to the home page]</a></p>
     </body>
 </html>
