--- a/jenskitchen/recipes/tapenade.html
+++ b/jenskitchen/recipes/tapenade.html
@@ -35,8 +35,8 @@
             <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
         </ol>
         
-        <p><a href="pasta/linguine.html"><em>Try the Linguine with Clam Sauce</em></a></p>
-        <p><a href="https://www.allrecipes.com/"><em>Go to Allrecipes.com</em></a></p>
+        <p><a href="pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
+        <p><a href="https://www.allrecipes.com/">Go to Allrecipes.com</a></p>
         <p><a href="../index.html">[Back to the home page]</a></p>
     </body>
 </html>
