--- a/bistrogallery/galleries/tabouleh.html
+++ b/bistrogallery/galleries/tabouleh.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Gallery: Catch of the Day</title>
+        <title>Gallery: Burgers</title>
         <style>
             body {
                 background-color: #faf2e4;
@@ -26,9 +26,9 @@
         </style>
     </head>
     <body>
-        <h1>Gallery: Catch of the Day</h1>
+        <h1>Gallery: The Best Burgers</h1>
 
-        <p><img src="../photos/fish-800.jpg" alt="close-up of cooked fish" width="800" height="600"></p>
+        <p><img src="../photos/tabouleh-800.jpg" alt="close-up of tabouleh" width="800" height="600"></p>
 
         <p><a href="../gallery.html">[Back to Gallery]</a></p>
     </body>
