--- a/bistrogallery/gallery.html
+++ b/bistrogallery/gallery.html
@@ -41,16 +41,16 @@
         <a href="galleries/fish.html"><img src="thumbnails/fish-200.jpg" alt="close-up of cooked fish"></a>
         <p>Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
-        <h2>Our Chicken</h2>
+        <h2>Our Fried Fowl</h2>
         <a href="galleries/chicken.html"><img src="thumbnails/chicken-200.jpg" alt="close-up of fried chicken"></a>
-        <p></p>
+        <p>Our chicken is freshly fried by our chef upon order. Our chicken is sourced from local farms.</p>
 
         <h2>Our Fries</h2>
         <a href="galleries/fries.html"><img src="thumbnails/fries-200.jpg" alt="close-up of fries and some ketchup"></a>
-        <p></p>
+        <p>The perfect side to pair with our burgers. Fries are made fresh every day.</p>
 
-        <h2>Our tabouleh</h2>
+        <h2>Our Tabouleh Salad</h2>
         <a href="galleries/tabouleh.html"><img src="thumbnails/tabouleh-200.jpg" alt="close-up of tabouleh"></a>
-        <p></p>
+        <p>Our tabouleh is made from fresh greens all locally sourced.</p>
     </body>
 </html>
