--- a/bistrogallery/galleries/chicken.html
+++ b/bistrogallery/galleries/chicken.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Gallery: Burgers</title>
+        <title>Gallery: Chicken</title>
         <style>
             body {
                 background-color: #faf2e4;
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body>
-        <h1>Gallery: The Best Burgers</h1>
+        <h1>Gallery: Fried Fowl</h1>
 
         <p><img src="../photos/chicken-800.jpg" alt="close-up of fried chicken" width="800" height="600"></p>
 
