--- a/bistrogallery/galleries/tabouleh.html
+++ b/bistrogallery/galleries/tabouleh.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Gallery: Burgers</title>
+        <title>Gallery: Tabouleh</title>
         <style>
             body {
                 background-color: #faf2e4;
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body>
-        <h1>Gallery: The Best Burgers</h1>
+        <h1>Gallery: Tabouleh Salad</h1>
 
         <p><img src="../photos/tabouleh-800.jpg" alt="close-up of tabouleh" width="800" height="600"></p>
 
