--- a/blackgoosebistro/index.html
+++ b/blackgoosebistro/index.html
@@ -46,6 +46,9 @@
                 display: inline;
                 margin: 0 15px;
             }
+            nav a {
+                color: #faf2e4;
+            }
         </style>
     </head>
     <body>
@@ -64,6 +67,13 @@
         </svg>
         <h1>Black Goose Bistro</h1>
         </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
 
         <h2>The Restaurant</h2>
         <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>
