--- a/blackgoosebistro/galleries/burgers.html
+++ b/blackgoosebistro/galleries/burgers.html
@@ -23,6 +23,27 @@
                 width: 100%; 
                 height:auto;
             }
+            footer {  
+                border-top: 1px solid turquoise;
+                text-align: center;
+                margin-top: 2em;
+            }
+
+            footer img {
+                width: 40px;
+                height: 40px;
+            }
+
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+            
+            li {
+                display: inline;
+                margin: 0 15px;
+            }
         </style>
     </head>
     <body>
@@ -31,5 +52,19 @@
         <p><img src="../photos/burgers-800.jpg" alt="close-up of burger" width="800" height="600"></p>
 
         <p><a href="../gallery.html">[Back to Gallery]</a></p>
+
+        <footer>
+            <div id="about">
+                <p>Location:<br>Baker's Corner, Seekonk, MA</p>
+                <p>Hours:<br><time>Tuesday to Saturday, 11am to 11pm</time></p>
+            </div>
+            <p><small>&copy; 2024 Black Goose Bistro</small></p>
+            <p>Visit us on social media!</p>
+            <ul>
+                <li><img src="../icons/facebook.svg" alt="Facebook"></li>
+                <li><img src="../icons/tiktok.svg" alt="TikTok"></li>
+                <li><img src="../icons/instagram.svg" alt="Instagram"></li>
+            </ul>
+        </footer>
     </body>
 </html>
