--- a/blackgoosebistro/news.html
+++ b/blackgoosebistro/news.html
@@ -3,18 +3,60 @@
     <head>
         <meta charset="utf-8">
         <title>The Black Goose Bistro News</title>
+        <style>
+            body {
+                background-color: #faf2e4;
+                margin: 0 10%;
+                font-family: sans-serif;
+            }
+
+            h1 {
+                text-align: center;
+                font-family: serif;
+                font-weight: normal;
+                text-transform: uppercase;
+                border-bottom: 1px solid #57b1dc;
+                margin-top: 30px;
+            }
+
+            h2 {
+                color: #d1633c;
+                font-size: 1em;
+            }
+
+            footer {  
+                border-top: 1px solid turquoise;
+                text-align: center;
+                margin-top: 2em;
+            }
+
+            footer img {
+                width: 40px;
+                height: 40px;
+            }
+
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+            
+            li {
+                display: inline;
+                margin: 0 15px;
+            }
+        </style>
     </head>
     <body>
         <header>
             <h1>The Black Goose Bistro News</h1>
             <nav>
-            <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>News</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                </ul>
+            </nav>
         </header>
         <article>
             <h2>Summer Menu Items</h2>
@@ -51,9 +93,16 @@
         </acticle>
         <footer>
             <div id="about">
-                <p>Location: Baker's Corner, Seekonk, MA<br><time>Hours: Tuesday to Saturday, 11am to 11pm</time></p>
+                <p>Location:<br>Baker's Corner, Seekonk, MA</p>
+                <p>Hours:<br><time>Tuesday to Saturday, 11am to 11pm</time></p>
             </div>
-            <p><small>All content copyright &copy;2024, Black Goose Bistro</small></p>
+            <p><small>&copy; 2024 Black Goose Bistro</small></p>
+            <p>Visit us on social media!</p>
+            <ul>
+                <li><img src="icons/facebook.svg" alt="Facebook"></li>
+                <li><img src="icons/tiktok.svg" alt="TikTok"></li>
+                <li><img src="icons/instagram.svg" alt="Instagram"></li>
+            </ul>
         </footer>
     </body>
 </html>
