--- a/tables/table_exercises.html
+++ b/tables/table_exercises.html
@@ -90,6 +90,10 @@
         <table>
             <caption>Your Content Here</caption>
             <colgroup>
+                <col>
+                <col>
+                <col>
+                <col>
             </colgroup>
             <thead>
                 <tr>
