--- a/blackgoosebistro/gallery.html
+++ b/blackgoosebistro/gallery.html
@@ -54,6 +54,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="pizza.html">Order a Pizza</a></li>
             </ul>
         </nav>
         <p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
