--- a/pizzaorder/pizza.html
+++ b/pizzaorder/pizza.html
@@ -19,10 +19,10 @@
                 <ul>
                     <li><label for="form-name">Name:</label> <input type="text" name="customername" id="form-name"></li>
                     <li><label for="form-address">Address:</label> <input type="text" name="address" id="form-address"></li>
-                    <li><label for="form-telephone">Telephone Number:</label> <input type="text" name="telephone" id="form-telephone"></li>
+                    <li><label for="form-tel">Telephone Number:</label> <input type="text" name="telephone" id="form-tel"></li>
                     <li><label for="form-email">Email:</label> <input type="text" name="email" id="form-email"></li>
-                    <li><label for="form-instructions">Delivery instructions:</label> <br>
-                    <textarea name="instructions" rows="4" cols="60" maxlength="400" placeholder="Now more than 400 characters long" id="form-instructions"></textarea></li>
+                    <li><label for="form-story">Delivery instructions:</label> <br>
+                    <textarea name="instructions" rows="4" cols="60" maxlength="400" placeholder="Now more than 400 characters long" id="form-story"></textarea></li>
                 </ul>
             </fieldset>
 
@@ -34,15 +34,15 @@
                 <ul>
                     <li><label><input type="radio" name="crust" value="white"> Classic white</label></li>
                     <li><label><input type="radio" name="crust" value="multigrain"> Multigrain</label></li>
-                    <li><label><input type="radio" name="crust" value="cheese-stuffed"> Cheese-stuffed crust</label></li>
-                    <li><label><input type="radio" name="crust" value="gluten-free"> Gluten-free</label></li>
+                    <li><label><input type="radio" name="crust" value="cheesecrust"> Cheese-stuffed crust</label></li>
+                    <li><label><input type="radio" name="crust" value="glutenfree"> Gluten-free</label></li>
                 </ul>
 
                 <p>Toppings <em>(Choose as many as you want)</em>:</p>
                 <ul>
-                    <li><label><input type="checkbox" name="toppings[]" value="red sauce" checked> Red sauce</label></li>
-                    <li><label><input type="checkbox" name="toppings[]" value="white sauce"> White sauce</label></li>
-                    <li><label><input type="checkbox" name="toppings[]" value="mozzarella cheese"> Mozzarella cheese</label></li>
+                    <li><label><input type="checkbox" name="toppings[]" value="redsauce" checked> Red sauce</label></li>
+                    <li><label><input type="checkbox" name="toppings[]" value="whitesauce"> White sauce</label></li>
+                    <li><label><input type="checkbox" name="toppings[]" value="mozzarella"> Mozzarella cheese</label></li>
                     <li><label><input type="checkbox" name="toppings[]" value="pepperoni"> Pepperoni</label></li>
                     <li><label><input type="checkbox" name="toppings[]" value="mushrooms"> Mushrooms</label></li>
                     <li><label><input type="checkbox" name="toppings[]" value="peppers"> Peppers</label></li>
