--- a/cookingarticle/cooking.html
+++ b/cookingarticle/cooking.html
@@ -19,6 +19,10 @@
                 color: maroon;
                 margin-left: 100px;
             }
+            img {
+                float: right;
+                margin: 0 12px;
+            }
         </style>
     </head>
     <body>
@@ -30,7 +34,7 @@
         <p><img src="salads.jpg" alt="A photo of smoked tomato salads on plates"></p>
         <p>Daniel prepared a salad of arugula, smoked tomatoes, tomato jam, and grilled avocado (it's as good as it sounds!). I jokingly called it "6-hour Salad" because that's how long he worked on it. The fresh tomatoes were slowly smoked over woodchips in the grill, and when they were softened, Daniel separated out the seeds which he reduced into a smoky jam. The tomatoes were cut into strips to put on the salads. As the day meandered, the avocados finally went on the grill after dark. I was on flashlight duty while Daniel checked for the perfect grill marks.</p>
 
-        <h2>The Main Course</h2>
+        <h2 style="color: orange;">The Main Course</h2>
         <p>In addition to the smoky grilled salad, Daniel served tarragon cornish hens with a cognac cream sauce loaded with chanterelles and grapes, and wild rice with grilled ramps (wild garlicky leeks). Dinner was served close to <em>midnight</em>, but it was a <em>party</em> so nobody cared.</p>
         <p>We left that night (technically, early the next morning) with full bellies, new cooking tips, and nearly 5 hours of footage. I'm considering renaming the show "Cooking with Nada Surf". </p>
     </body>
