--- a/blackgoosebistro/menu.html
+++ b/blackgoosebistro/menu.html
@@ -3,6 +3,32 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Black Goose Bistro Summer Menu</title>
+		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+		
+		<style>
+			html {
+				font-size: 100%;
+			}
+			body {
+				font-family: Verdana, sans-serif;
+			}
+			h1 {
+				font-family: "Julius Sans One", Verdana, sans-serif;
+				font-size: 2.5rem;
+			}
+			h2 {
+				font-size: 1rem;
+			}
+			dt {
+				font-weight: bold;
+			}
+			strong {
+				font-style: italic;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="info">
