--- a/blackgoosebistro/menu.html
+++ b/blackgoosebistro/menu.html
@@ -16,8 +16,7 @@
 				font-family: Verdana, sans-serif;
 			}
 			h1 {
-				font-family: "Julius Sans One", Verdana, sans-serif;
-				font-size: 2.5rem;
+				font: 400 2.5rem "Julius Sans One", Verdana, sans-serif;
 			}
 			h2 {
 				font-size: 1rem;
@@ -27,6 +26,27 @@
 			}
 			strong {
 				font-style: italic;
+			}
+			dt strong {
+				color: tomato;
+			}
+			#info {
+				color: cadetblue;
+			}
+			#info p {
+				font-style: italic;
+			}
+			.price {
+				font-style: italic;
+				color: gray;
+			}
+			.label {
+				font-variant: small-caps;
+				font-style: normal;
+			}
+			p.warning, sup {
+				font-size: small;
+				color: tomato;
 			}
 		</style>
 	</head>
