--- a/blackgoosebistro/menu.html
+++ b/blackgoosebistro/menu.html
@@ -13,16 +13,23 @@
 				font-size: 100%;
 			}
 			body {
-				font-family: Verdana, sans-serif;
+				font-family: Georgia, serif;
+				line-height: 1.75;
 			}
 			h1 {
-				font: 400 2.5rem "Julius Sans One", Verdana, sans-serif;
+				font: bold 1.5em "Marko One", Georgia, serif;
+				color: olive;
+				text-shadow: .1em .1em .05em gainsboro;
 			}
 			h2 {
 				font-size: 1rem;
+				text-transform: uppercase;
+				letter-spacing: .5em;
+				color: cadetblue;
 			}
 			dt {
 				font-weight: bold;
+				color: olivedrab;
 			}
 			strong {
 				font-style: italic;
@@ -47,6 +54,13 @@
 			p.warning, sup {
 				font-size: small;
 				color: tomato;
+			}
+			h1, h2, #info {
+				text-align: center;
+			}
+			h2 + p {
+				text-align: center;
+				font-style: italic;
 			}
 		</style>
 	</head>
