--- a/blackgoosebistro/menu.html
+++ b/blackgoosebistro/menu.html
@@ -71,6 +71,8 @@
 			<p>Baker's Corner, Seekonk, Massachusetts<br>
 			<span class="label">Hours: Monday through Thursday:</span> 11 to 9, <span class="label">Friday and Saturday;</span> 11 to midnight</p>
 		</div>
+		
+		<a href="index.html">Home</a>
 
 		<div id="appetizers">
 			<h2>Appetizers</h2>
