--- a/blackgoosebistro/menu.html
+++ b/blackgoosebistro/menu.html
@@ -17,8 +17,8 @@
 				line-height: 1.75;
 			}
 			h1 {
-				font: bold 1.5em "Marko One", Georgia, serif;
-				color: olive;
+				font: 400 2.5rem "Julius Sans One", Verdana, sans-serif;
+				color: olivedrab;
 				text-shadow: .1em .1em .05em gainsboro;
 			}
 			h2 {
@@ -72,7 +72,7 @@
 			<span class="label">Hours: Monday through Thursday:</span> 11 to 9, <span class="label">Friday and Saturday;</span> 11 to midnight</p>
 		</div>
 		
-		<a href="index.html">Home</a>
+		<p><a href="index.html">Home</a></p>
 
 		<div id="appetizers">
 			<h2>Appetizers</h2>
