--- a/blackgoosebistro/summermenu.html
+++ b/blackgoosebistro/summermenu.html
@@ -15,22 +15,20 @@
 				font-family: Georgia, serif;
 				line-height: 1.75;
 				margin: 0 15% 0;
-        background-color: #cdd7ae;
-        background-image: url(images/bullseye.png);
-        background-position: top center;
-        background-attachment: fixed;
+                background-color: #cdd7ae;
+                background-image: url(images/bullseye.png);
+                background-position: top center;
+                background-attachment: fixed;
 			}
 			header {
 				margin-top: 0;
 				padding: 3em 1em 2em 1em;
 				text-align: center;
-        background-color: rgb(255 255 255 / 0.5);
-        background-image: 
-            url(images/goose_shadow.png),
-            url(images/blackgoose.png);
-        background-repeat: no-repeat, no-repeat;
-        background-position: 3em bottom, center;
-        background-size: auto, contain;
+                background-color: rgb(255 255 255 / 0.5);
+                background-image: url(images/goose_shadow.png), url(images/blackgoose.png);
+                background-repeat: no-repeat, no-repeat;
+                background-position: 3em bottom, center;
+                background-size: auto, contain;
 			}
 			h1 {
 				font: 400 2.5rem "Julius Sans One", Verdana, sans-serif;
