background color test

--- a/blackgoosebistro/summermenu.html
+++ b/blackgoosebistro/summermenu.html
@@ -11,13 +11,8 @@
 				font-size: 100%;
 			}
 			body {
-				font-family: Georgia, serif;
-				line-height: 1.75;
-				margin: 0 15% 0;
-        background-color: #cdd7ae;
-				background-image: url(images/bullseye.png);
-				background-position: top center;
-				background-attachment: fixed;
+
+        background-color: #ccd7ae;
 			}
 			header {
 				margin-top: 0;
