--- a/blackgoosebistro/summermenu.html
+++ b/blackgoosebistro/summermenu.html
@@ -14,10 +14,11 @@
 				font-family: Georgia, serif;
 				line-height: 1.75;
 				margin: 0 15% 0;
+				background-color: #ccd7ae;
 				background-image: url(images/bullseye.png);
 				background-position: top center;
 				background-attachment: fixed;
-            }
+			}
 			header {
 				margin-top: 0;
 				padding: 3em 1em 2em 1em;
