--- a/blackgoosebistro/summermenu.html
+++ b/blackgoosebistro/summermenu.html
@@ -14,7 +14,7 @@
 				font-family: Georgia, serif;
 				line-height: 1.75;
 				margin: 0 15% 0;
-				background-color: #ccd7ae;
+				background-color: #cdd7ae;
 				background-image: url(images/bullseye.png);
 				background-position: top center;
 				background-attachment: fixed;
